# pislice

./: README.md  pyproject.toml
pislice/: pislice.py
